--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,20 +1,33 @@
-<%-include('navigationbar/navigation.ejs') %>
-<h1>Log in</h1>
+<%-include('partials/header') %>
+<br>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<form action="index.ejs" method="POST" class="form-horizontal" role="form">
+<form action="/newproduct" method="POST" class="form-horizontal" role="form">
         <div class="form-group">
-            <legend>Form title</legend>
+            <legend>Usuario</legend>
         </div>
 
         
 
-        <div class="form-group">
+        <div class="form-group mx-auto" style="width: 200px">
             <div class="col-sm-10 col-sm-offset-2">
-                <input type="text">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <input type="email" name="email" placeholder="Introduzca su e-mail" id="email">
+                <br><hr>
+                <input type="text" name="newItem" placeholder="Introduzca su nombre">
+                <br><hr>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </div>
         </div>
 </form>
+<script>
+    const txtNewItem = document.getElementById('email');
+    txtNewItem.focus();
+
+</script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+
+<%-include('partials/footer')%>
+</body>
+</html>
