--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -11,29 +11,20 @@
 <link rel="stylesheet" href="css/main.css">
 <div class="nada">
   <nav class="navbar fixed-top navbar-expand-md navbar-light bg-light"> 
-    <div class="right-side">
-        <a class="navbar-brand" href="/">Jagger</a>
-    </div>
-    <div class="imagen">
-      <div class="logo_area" style="width: 200px">
-        <a class="logo" href="/">
-          <img id="logojagger" src="images/jaggerfood.png" alt="Jagger" width="150px">
-        </a>
-      </div>
-    </div>
-    <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
+    
+    <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
     </button>
-      <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
+      <div class="collapse navbar-collapse mr-auto" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/">Inicio <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Hamburguesas</a>
+          <a class="nav-link" href="/products">Hamburguesas</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#">Lomitos</a>
+          <a class="nav-link" href="/newproducts">Lomitos</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link" href="#">Milanesas</a>
@@ -48,6 +39,18 @@
         </li>
       </ul>
       </div>
+      <div class="imagen">
+        <div class="logo_area" style="width: 200px">
+          <a class="logo" href="/">
+            <img id="logojagger" src="images/jaggerfood.png" alt="Jagger" width="150px">
+          </a>
+        </div>
+      </div>
+      <div class="redes-sociales">
+        <a href="tel:+54346315456597" target="_blank"><i class="fab fa-whatsapp fa-2x"></i></a>
+        <a href="https://www.instagram.com/jaggerfood/" target="_blank"><i class="fab fa-instagram fa-2x"></i></a>
+        <a href="" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
+      </div>
     
       <!--<form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search" aria-label="Search">
@@ -55,5 +58,6 @@
       </form>
     </div>-->
   </nav>
+  <hr>
 </div><br>
   
