--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,12 @@
 <script src="https://kit.fontawesome.com/e2612ca049.js" crossorigin="anonymous"></script>
-<footer class="page-footer font-smanll blue fixed-bottom">
+<footer class="page-footer font-small blue  fixed-bottom">
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <div class="footer-copyright text-center"> © 2020 Copyright:
       <a href="https://roulet.com.ar/"> roulet.com.ar</a>
     </div>
     <!-- Copyright -->
-    <div>
+    <div class="enlaces">
       <a href="https://www.instagram.com/jaggerfood/"><i class="fab fa-instagram"></i></a>
       <a href="+54 3463 408532"><i class="fab fa-whatsapp"></i></a>
       <a href=""><i class="fab fa-facebook-square"></i></a>
