--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,15 +1,15 @@
 <script src="https://kit.fontawesome.com/e2612ca049.js" crossorigin="anonymous"></script>
-<footer class="page-footer font-small blue  fixed-bottom">
+<footer class="page-footer font-small blue">
 
     <!-- Copyright -->
     <div class="footer-copyright text-center"> © 2020 Copyright:
-      <a href="https://roulet.com.ar/"> roulet.com.ar</a>
+      <a href="https://roulet.com.ar/" target="_blank"> Roulet</a>
     </div>
     <!-- Copyright -->
-    <div class="enlaces">
-      <a href="https://www.instagram.com/jaggerfood/"><i class="fab fa-instagram"></i></a>
-      <a href="+54 3463 408532"><i class="fab fa-whatsapp"></i></a>
-      <a href=""><i class="fab fa-facebook-square"></i></a>
+    <div class="page-footer text-center">
+      <a href="https://www.instagram.com/ferminroulet/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="mailto:fermin@roulet.com.ar"><i class="fas fa-envelope"></i></a>
+      <a href="https://www.facebook.com/ferminroulet" target="_blank"><i class="fab fa-facebook-square"></i></a>
     </div>
 
   </footer>
