--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -24,14 +24,14 @@
           <a class="nav-link" href="/products">Hamburguesas</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="/newproducts">Lomitos</a>
+          <a class="nav-link" href="/partials/header">Lomitos</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#">Milanesas</a>
+          <a class="nav-link" href="/snake">Milanesas</a>
         </li>
         <li>
           <li class="nav-item dropdown">
-            <a class="nav-link" href="#">Otros</a>
+            <a class="nav-link" href="/">Otros</a>
           </li>
         </li>
         <li class="nav-item">
@@ -41,7 +41,7 @@
       </div>
       <div class="imagen">
         <div class="logo_area" style="width: 200px">
-          <a class="logo" href="/">
+          <a class="logo" href="/" tabindex="-1">
             <img id="logojagger" src="images/jaggerfood.png" alt="Jagger" width="150px">
           </a>
         </div>
