--- a/views/products.ejs
+++ b/views/products.ejs
@@ -3,13 +3,13 @@
 
 <table class="table table-condensed table-hover">
     <thead>
-        <tr>
+        <tr class="cuadro">
             <th>Nombre</th>
             <th>Email</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
+        <tr class="cuadro-1">
             <td><%for(var i = 0; i < items.length; i++) {
                 %> <p>
                 <%= items[i].name %>
