--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,21 @@
 body {
-    background-image: url("https://img.freepik.com/foto-gratis/fondo-textura-papel-arrugado-negro-oscuro-cerca_99266-420.jpg?size=626&ext=jpg");
+    background-image: url(/images/background.jpg);
     
+}
+
+.d-block {
+    border-radius: 10px;
+    max-height: 100%;
+}
+
+.cuadro {
+    text-decoration-style: solid;
+    color: rgb(180, 84, 49);
+}
+
+.cuadro-1 {
+    color: rgb(155, 150, 148);
+    text-shadow: rgb(170, 84, 52) 0.5px 0.5px 2px;
 }
 
 .img {
@@ -12,13 +27,14 @@ body {
   .navbar {
       box-shadow: 0px 3px 10px #5a5858;
       opacity: 0.92;
+      font-family: "Fira Sans",  sans-serif;
   }
 
   .logo {
       position: absolute;
       bottom: -50px;
-      right: 45%;
-      left: 45%;
+      right: 10%;
+      left: 10%;
 
   }
 
@@ -36,8 +52,8 @@ body {
     }
     .logo {
         position: absolute;
-        right: 45%;
-        left: 45%;
+        right: 40%;
+        left: 40%;
         height: auto;
         width: auto;
     }
@@ -52,6 +68,11 @@ body {
         height: auto;
     }
     .fab {
+        box-sizing: auto;
+        height: 100%;
+    }
+
+    .fas {
         box-sizing: auto;
         height: 100%;
     }
@@ -106,6 +127,13 @@ body {
       opacity: 0.8;
   }
 
+  .fas {
+    display: inline;
+    margin: 10px 8px 10px 8px;
+    color: rgb(48, 46, 46);
+    opacity: 0.8;
+}
+
   .fab:hover {
       opacity: 1;
   }
@@ -130,3 +158,6 @@ body {
       margin-top: 5%;
       
   }
+
+
+
