--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,18 +2,19 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/html" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Jagger</title>
+    <title>-Jagger Food-</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
     
 <body>
     <%-include('navigation') %>
-    <div class="container pt-5">
-        <h2 class="titulos mt-4 mx-auto"> <%= titulo %> </h2>
-    </div>
+    
     
 
     <!--
